@@ -5,3 +5,14 @@ MyBatis Aggregator
 
 MyBatis-Aggregator is the MyBatis aggregator POM which builds all MyBatis modules.
 
+## Running ##
+
+Use these JVM settings
+
+-Xmx512m -XX:MaxPermSize=128m
+
+## Current Issues ##
+
+Current elements skipped due to failures
+- memcached-cache
+- mybatis-redis
